--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -6,12 +6,9 @@
 <!--Navbar Links-->
 <nav id="nav">
   <ul>
-    <li class="shape-circle circle-one"><a href="#">Contact</a></li>
-    <li class="shape-circle circle-two"><a href="#">Blog</a></li>
-    <li class="shape-circle circle-three"><a href="#">Work</a></li>
-    <li class="shape-circle circle-five">
-      <a href="#">Home</a>
-    </li>
+    <li class="shape-circle circle-one"><a href="contact.html">Contact</a></li>
+    <li class="shape-circle circle-two"><a href="about.html">About</a></li>
+    <li class="shape-circle circle-three"><a href="/">Home</a></li>
   </ul>
 </nav>
 
