--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -104,7 +104,7 @@ ul {
   right: -10vw;
   position: absolute;
   transition: all 1s ease-in-out;
-  background: #2979FF;
+  background: #074684;
   box-shadow: 0 0px 0px rgba(4, 26, 62, 0.5);
 }
 
@@ -138,15 +138,15 @@ nav.visible li:nth-child(3){
   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
 }
 
-nav.visible li:last-child{
-  width: 50vw;
-  height: 50vw;
-  top: -25vw;
-  right: -25vw;
-  z-index: 8;
-  transition: all .8s ease-in-out;
-  box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
-}
+// nav.visible li:last-child{
+//   width: 50vw;
+//   height: 50vw;
+//   top: -25vw;
+//   right: -25vw;
+//   z-index: 8;
+//   transition: all .8s ease-in-out;
+//   box-shadow: 0 0px 80px rgba(4, 26, 62, 0.5);
+// }
 
 nav.visible li:first-child a {
   line-height: 265vw !important;
@@ -165,10 +165,10 @@ nav.visible li:nth-child(3) a {
 
 }
 
-nav.visible li:last-child a {
-  line-height: 70vw !important;
-  text-indent:12vw !important;
-}
+// nav.visible li:last-child a {
+//   line-height: 70vw !important;
+//   text-indent:12vw !important;
+// }
 
 
 /* Main Body CSS */
