--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,11 @@
 ---
-title: Le Wagon - Middleman
+title: John Haus - Full Stack Web Developer
 ---
 
 <div id="home">
   <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
     <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
+      John Haus - Full Stack Web Developer.
     </p>
   </div>
 </div>
