--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -2,35 +2,12 @@
 title: John Haus - About
 ---
 
-
-
-<!--HamBurger Icon-->
-<div class="bars" id="nav-action">
-  <span class="bar"> </span>
+<div class="top-navbar-background">
 </div>
-
-<!--Navbar Links-->
-<nav id="nav">
-  <ul>
-    <li class="shape-circle circle-one"><a href="contact.html">Contact</a></li>
-    <li class="shape-circle circle-two"><a href="about.html">About</a></li>
-    <li class="shape-circle circle-three"><a href="/">Home</a></li>
-  </ul>
-</nav>
-
-<script type="text/javascript">
-  clickNavbar();
-</script>
-
-
-
-<div class="top">
-</div>
-  <div class="pages">
-    <div class="about-content">
-
-      <ul class="list-inline">
-        About
-      </ul>
-    </div>
+<div class="pages">
+  <div>
+    <p class="list-inline">
+      About
+    </p>
   </div>
+</div>
