--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,32 +2,10 @@
 title: John Haus - Full Stack Web Developer
 ---
 
-
-
-<!--HamBurger Icon-->
-<div class="bars" id="nav-action">
-  <span class="bar"> </span>
-</div>
-
-<!--Navbar Links-->
-<nav id="nav">
-  <ul>
-    <li class="shape-circle circle-one"><a href="contact.html">Contact</a></li>
-    <li class="shape-circle circle-two"><a href="about.html">About</a></li>
-    <li class="shape-circle circle-three"><a href="/">Home</a></li>
-  </ul>
-</nav>
-
-<script type="text/javascript">
-  clickNavbar();
-</script>
-
-
-
-<div class="top">
+<div class="top-navbar-background">
 </div>
 <div class="pages">
-  <div class="home-content">
+  <div>
     <p>
       John Haus - Full Stack Web Developer.
     </p>
