--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,7 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
+    <%= partial "layouts/navbar" %>
     <%= yield %>
     <%= partial "layouts/footer" %>
   </body>
