--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,9 +5,21 @@ title: John Haus - Full Stack Web Developer
 <div class="top-navbar-background">
 </div>
 <div class="pages">
-  <div>
-    <p>
-      John Haus - Full Stack Web Developer.
-    </p>
+  <div class="container">
+    <div class="row">
+      <p>
+        John Haus - Full Stack Web Developer.
+      </p>
+    </div>
+    <div class="row">
+      <p>Projects</p>
+      <div class="row">
+      <ul>
+        <li>project 1</li>
+        <li>project 2</li>
+        <li>project 3</li>
+      </ul>
+      </div>
+    </div>
   </div>
 </div>
