--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -2,9 +2,12 @@
 
 // For example:
 $red: #EE5F5B;
+$light-blue: #357FFD;
 $blue: #469AE0;
+$dark-blue: #074684;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$white: #fff;
