--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,15 +11,16 @@ title: John Haus - Full Stack Web Developer
         John Haus - Full Stack Web Developer.
       </p>
     </div>
-    <div class="row">
+    <div>
       <p>Projects</p>
-      <div class="row">
-      <ul>
-        <li>project 1</li>
-        <li>project 2</li>
-        <li>project 3</li>
-      </ul>
+      <div class="col-xs-10 col-sm-4">
+        <div>project 1 and some other text stuff here</div>
+        <div>project 2 and some other text stuff here</div>
+        <div>project 3 and some other text stuff here</div>
       </div>
     </div>
   </div>
 </div>
+
+<!-- fix me then add me -->
+    <hr align="center" background-color="black" width="90%">
