--- a/source/stylesheets/pages/_pages.scss
+++ b/source/stylesheets/pages/_pages.scss
@@ -34,7 +34,7 @@
 
 .top-navbar-background {
   z-index: -1;
-  background-color: #074684;
+  background-color: $dark-blue;
   height: 85px;
   width: 100%;
   position: fixed;
