added links to footer and a few tweaks

--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer">
-  <a href="#"><i class="fab fa-github footer-padding"></i></a>
-  <a href="#"><i class="fab fa-linkedin footer-padding"></i></a>
+  <%= link_to '', 'https://www.linkedin.com/in/johnhaus', class: "fab fa-linkedin footer-padding" %>
+  <%= link_to '', 'https://github.com/johnhaus', class: "fab fa-github footer-padding" %>
 </div>
