--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -4,9 +4,10 @@
   padding: 10px;
 }
 .footer a {
-  color: #ffffff;
+  color: $white;
   &:hover {
-    color: #aaaaaa;
+    color: $light-blue;
+    text-decoration: none;
   }
 }
 .footer-padding {
