--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,16 +11,35 @@ title: John Haus - Full Stack Web Developer
         John Haus - Full Stack Web Developer.
       </p>
     </div>
-    <div>
+    <div class="row">
       <p>Projects</p>
-      <div class="col-xs-10 col-sm-4">
-        <div>project 1 and some other text stuff here</div>
-        <div>project 2 and some other text stuff here</div>
-        <div>project 3 and some other text stuff here</div>
+      <div>
+        <div>
+          <% link_to 'https://restaurant-advisor.herokuapp.com' do %>
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "Restaurant-advisor.png" %>')">
+            </div>
+          <% end %>
+        </div>
+        <div>
+          <% link_to 'https://caratapp.herokuapp.com' do %>
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "Caratapp.png" %>')">
+            </div>
+          <% end %>
+        </div>
+        <div>
+          <% link_to 'https://beameup.herokuapp.com' do %>
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "Beameup.png" %>')">
+            </div>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
+
 
 <!-- fix me then add me -->
     <hr align="center" background-color="black" width="90%">
