added title to navbar

--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -2,7 +2,9 @@
   <div class="bars" id="nav-action">
     <span class="bar"> </span>
   </div>
-
+  <div class="top-navbar-background">
+    <h1>John Haus - Full Stack Web Developer</h1>
+  </div>
   <!--Navbar Links-->
   <nav id="nav">
     <ul>
