--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,8 +2,6 @@
 title: John Haus - Full Stack Web Developer
 ---
 
-<div class="top-navbar-background">
-</div>
 <div class="pages">
   <div class="container">
     <div class="row">
@@ -42,4 +40,4 @@ title: John Haus - Full Stack Web Developer
 
 
 <!-- fix me then add me -->
-    <hr align="center" background-color="black" width="90%">
+    <hr align="center" background-color="red" color="red" width="90%">
