--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -235,3 +235,18 @@ article a:hover {
     font-size: 60px;
   }
 }
+
+.top-navbar-background {
+  z-index: +1;
+  background-color: $dark-blue;
+  height: 85px;
+  width: 100%;
+  position: fixed;
+  h1 {
+    font-size: 15px;
+    padding: 10px;
+    color: $white;
+    letter-spacing: 0px;
+    margin-right: 50px;
+  }
+}
