--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -2,7 +2,7 @@
 title: John Haus - About
 ---
 
-<div class="pages">
+<div class="pages top-padding">
   <div>
     <p class="list-inline">
       About
