--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,31 +2,36 @@
 title: John Haus - Full Stack Web Developer
 ---
 
-<div class="pages">
+<div class="pages top-padding">
   <div class="container">
     <div class="row">
-      <p>
-        John Haus - Full Stack Web Developer.
+      <p class="text-setup">
+        John Haus
       </p>
+      <p class="text-setup">
+        Full Stack Web Developer
+      </p>
+      <div class="border">
+      </div>
     </div>
     <div class="row">
-      <p>Projects</p>
+      <p class="text-setup">Take a look at some of my projects below</p>
       <div>
         <div>
           <% link_to 'https://restaurant-advisor.herokuapp.com' do %>
-            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "Restaurant-advisor.png" %>')">
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= image_path "Restaurant-advisor.png" %>')">
             </div>
           <% end %>
         </div>
         <div>
           <% link_to 'https://caratapp.herokuapp.com' do %>
-            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "Caratapp.png" %>')">
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= image_path "Caratapp.png" %>')">
             </div>
           <% end %>
         </div>
         <div>
           <% link_to 'https://beameup.herokuapp.com' do %>
-            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= image_path "Beameup.png" %>')">
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= image_path "Beameup.png" %>')">
             </div>
           <% end %>
         </div>
@@ -34,10 +39,3 @@ title: John Haus - Full Stack Web Developer
     </div>
   </div>
 </div>
-
-
-
-
-
-<!-- fix me then add me -->
-    <hr align="center" background-color="red" color="red" width="90%">
