--- a/source/stylesheets/pages/_pages.scss
+++ b/source/stylesheets/pages/_pages.scss
@@ -1,5 +1,4 @@
 .pages {
-  height: 250vh;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -26,7 +25,7 @@
 }
 
 .website-image {
-  height: 325px;
+  height: 430px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
@@ -35,5 +34,20 @@
   padding: 5px;
   border-radius: 3px;
   box-shadow: 3px 3px 8px rgba(33,33,33,0.8);
-  margin: 15px;
+  margin: 55px;
+}
+
+.border {
+  border-bottom: 2px solid black;
+}
+
+.text-setup {
+  margin: 40px;
+  font-size: 20px;
+  font-weight: bolder;
+  color: $dark-blue;
+}
+
+.top-padding {
+  padding-top: 80px;
 }
