set up a contact form

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -4,8 +4,11 @@ title: John Haus - About
 
 <div class="pages top-padding">
   <div>
-    <p class="list-inline">
+    <p class="text-setup">
       About
     </p>
+    <p>linkedin</p>
+    <p>github</p>
+    <p>email</p>
   </div>
 </div>
