--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -5,9 +5,15 @@ title: John Haus - Contact
 <div class="pages top-padding">
   <div>
     <p class="text-setup">
-      Contact
+      Contact me
     </p>
-    <div class="container">
+    <p class="text-setup">
+      Have a website you would like built or improved?
+    </p>
+    <p class="text-setup">
+      Reach out today and let's see if we can help each other out.
+    </p>
+    <div class="container bottom-padding">
       <div class="contact-form col-xs-12 col-sm-6 col-sm-offset-3">
         <form method="POST" action="https://formspree.io/YOUREMAILHERE">
           <div class="contact-padding"><input type="text" name="name" placeholder="Full name"></div>
