added link for contact and associated styling

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,17 +5,15 @@ title: John Haus - Full Stack Web Developer
 <div class="pages top-padding">
   <div class="container">
     <div class="row">
-      <p class="text-setup">
-        John Haus
-      </p>
-      <p class="text-setup">
-        Full Stack Web Developer
-      </p>
-      <div class="border">
-      </div>
+      <h1 class="text-setup">John Haus - Full Stack Web Developer</h1>
+      <p class="text-setup">Need your website built or improved?</p>
+      <p class="text-setup">Contact me today and let's get a conversation started.</p>
+      <a href="contact.html" class="contact-button ">Contact</a>
+      <div class="border top-margin"></div>
     </div>
     <div class="row">
       <p class="text-setup">Take a look at some of my projects below</p>
+      <i class="fas fa-arrow-down fa-3x down-arrow"></i>
       <div>
         <div>
           <% link_to 'https://restaurant-advisor.herokuapp.com' do %>
