--- a/source/stylesheets/pages/_pages.scss
+++ b/source/stylesheets/pages/_pages.scss
@@ -3,25 +3,15 @@
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  // background-image: linear-gradient(0deg, white 80%, #357FFD 20%);
-  img {
-    width: 150px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
-  }
-  h2 {
-    font-size: 17px;
-    font-weight: bold;
-    color: rgba(0,0,0,0.6);
-  }
-  a {
-    color: rgba(0,0,0,0.25);
-    font-weight: bold;
-    letter-spacing: -0.5px;
-    font-size: 15px;
-  }
-  .fa-heart {
-    color: #D23333;
-  }
+}
+
+h1 {
+  font-size: 60px;
+  text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  text-transform: uppercase;
+  font-size: 120px;
+  letter-spacing:5px;
+  padding-top:40px;
 }
 
 .website-image {
@@ -42,7 +32,7 @@
 }
 
 .text-setup {
-  margin: 40px;
+  margin: 35px;
   font-size: 20px;
   font-weight: bolder;
   color: $dark-blue;
@@ -79,4 +69,25 @@ button {
 
 .bottom-padding {
   padding-bottom: 50px;
+}
+
+.top-margin {
+  margin-top: 40px;
+}
+
+.down-arrow {
+  color: $dark-blue;
+}
+
+.contact-button {
+  color: white;
+  font-weight: bolder;
+  background-color: orange;
+  padding: 10px 50px;
+  border-radius: 10px;
+  &:hover {
+    background-color: darkorange;
+    text-decoration: none;
+    color: white;
+  }
 }
