--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -4,9 +4,9 @@ title: John Haus - Contact
 
 <div class="pages top-padding">
   <div>
-    <p class="text-setup">
+    <h1 class="text-setup">
       Contact me
-    </p>
+    </h1>
     <p class="text-setup">
       Have a website you would like built or improved?
     </p>
