changed page heading

--- a/source/stylesheets/pages/_pages.scss
+++ b/source/stylesheets/pages/_pages.scss
@@ -6,12 +6,13 @@
 }
 
 h1 {
-  font-size: 60px;
+  font-size: 30px;
   text-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   text-transform: uppercase;
-  font-size: 120px;
-  letter-spacing:5px;
-  padding-top:40px;
+  letter-spacing: 5px;
+  padding-top: 40px;
+  margin: 35px;
+  color: $dark-blue;
 }
 
 .website-image {
