--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -8,7 +8,7 @@ title: John Haus - Contact
       Contact me
     </h1>
     <p class="text-setup">
-      Have a website you would like built or improved?
+      Looking for a professional and enthusiatic developer?
     </p>
     <p class="text-setup">
       Reach out today and let's see if we can help each other out.
