--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: John Haus - Full Stack Web Developer
   <div class="container">
     <div class="row">
       <h1>John Haus - Full Stack Web Developer</h1>
-      <p class="text-setup">Need your website built or improved?</p>
+      <p class="text-setup">Looking to add a developer to your team?</p>
       <p class="text-setup">Contact me today and let's get a conversation started.</p>
       <a href="contact.html" class="contact-button ">Contact</a>
       <div class="border top-margin"></div>
