--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
     <ul>
       <li class="shape-circle circle-one"><a href="contact.html">Contact</a></li>
       <li class="shape-circle circle-two"><a href="about.html">About</a></li>
-      <li class="shape-circle circle-three"><a href="/">Home</a></li>
+      <li class="shape-circle circle-three"><a href="index.html">Home</a></li>
     </ul>
   </nav>
 
