make links larger

--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="footer">
-  <%= link_to '', 'https://www.linkedin.com/in/johnhaus', class: "fab fa-linkedin footer-padding" %>
-  <%= link_to '', 'https://github.com/johnhaus', class: "fab fa-github footer-padding" %>
+  <%= link_to '', 'https://www.linkedin.com/in/johnhaus', class: "fab fa-linkedin fa-2x footer-padding" %>
+  <%= link_to '', 'https://github.com/johnhaus', class: "fab fa-github fa-2x footer-padding" %>
 </div>
