--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,16 +4,16 @@ title: John Haus - Full Stack Web Developer
 
 <div class="pages top-padding">
   <div class="container">
-    <div class="row">
+    <div class="row background-picture" style="background-image: url('<%= image_path "Background.jpg" %>')">
       <h1>John Haus - Full Stack Web Developer</h1>
       <p class="text-setup">Looking to add a developer to your team?</p>
       <p class="text-setup">Contact me today and let's get a conversation started.</p>
       <a href="contact.html" class="contact-button ">Contact</a>
       <div class="border top-margin"></div>
-    </div>
-    <div class="row">
       <p class="text-setup">Take a look at some of my projects below</p>
       <i class="fas fa-arrow-down fa-3x down-arrow"></i>
+    </div>
+    <div class="row">
       <div>
         <div>
           <% link_to 'https://restaurant-advisor.herokuapp.com' do %>
