--- a/source/stylesheets/pages/_pages.scss
+++ b/source/stylesheets/pages/_pages.scss
@@ -13,6 +13,7 @@ h1 {
   padding-top: 40px;
   margin: 35px;
   color: $dark-blue;
+  font-weight: bolder;
 }
 
 .website-image {
@@ -89,4 +90,9 @@ button {
     text-decoration: none;
     color: white;
   }
+}
+
+.background-picture {
+  background-size: cover;
+  height: calc(100vh - 80px);
 }
