--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -13,6 +13,9 @@ title: John Haus - Contact
     <p class="text-setup">
       Reach out today and let's see if we can help each other out.
     </p>
+    <p class="text-setup">
+      You can email me at johnhaus.dev@outlook.com or use the form below.
+    </p>
     <div class="container bottom-padding">
       <div class="contact-form col-xs-12 col-sm-6 col-sm-offset-3">
         <form method="POST" action="https://formspree.io/johnhaus.dev@outlook.com">
