added link to home page

--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <span class="bar"> </span>
   </div>
   <div class="top-navbar-background">
-    <h2>John Haus - Full Stack Web Developer</h2>
+    <h2><a href="index.html">John Haus - Full Stack Web Developer</a></h2>
   </div>
   <!--Navbar Links-->
   <nav id="nav">
