updated email address

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -18,7 +18,7 @@ title: John Haus - Contact
     </p>
     <div class="container bottom-padding">
       <div class="contact-form col-xs-12 col-sm-6 col-sm-offset-3">
-        <form method="POST" action="https://formspree.io/johnhaus.dev@outlook.com">
+        <form method="POST" action="https://formspree.io/johnhaus.dev@yahoo.com">
           <div class="contact-padding"><input type="text" name="name" placeholder="Full name"></div>
           <div class="contact-padding"><input type="email" name="email" placeholder="Your email"></div>
           <div class="contact-padding"><textarea name="message" placeholder="Message"></textarea></div>
