updated listed email

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -14,7 +14,7 @@ title: John Haus - Contact
       Reach out today and let's see if we can help each other out.
     </p>
     <p class="text-setup">
-      You can email me at johnhaus.dev@outlook.com or use the form below.
+      You can email me at johnhaus.dev@yahoo.com or use the form below.
     </p>
     <div class="container bottom-padding">
       <div class="contact-form col-xs-12 col-sm-6 col-sm-offset-3">
