changed meta picture data

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
     <!-- Use the title from a page's frontmatter if it has one -->
 
     <meta property='og:title' content='John Haus - Web Developer'/>
-    <meta property='og:image' content='JHaus.png'/>
+    <meta property='og:image' content="JHaus.png"/>
     <meta property='og:description' content='My Profile Page'/>
     <meta property='og:url' content='https://johnhaus.github.io/jhaus/'/>
 
