--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,9 +6,10 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Use the title from a page's frontmatter if it has one -->
+    auto_display_meta_tags
 
     <meta property='og:title' content='John Haus - Web Developer'/>
-    <meta property='og:image' content="JHaus.png"/>
+    <meta property='og:image' content="pull_image JHaus.png"/>
     <meta property='og:description' content='My Profile Page'/>
     <meta property='og:url' content='https://johnhaus.github.io/jhaus/'/>
 
