--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta property='og:title' content='John Haus - Web Developer'/>
-    <meta property='og:image' content="(<%= current_page.url %>JHaus.png)"/>
+    <meta property='og:image' content=<%= image_tag image_url("JHaus.png")%>/>
     <meta property='og:description' content='My Profile Page'/>
     <meta property='og:url' content='https://johnhaus.github.io/jhaus/'/>
 
