--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -15,7 +15,7 @@ title: John Haus - About
       <p class="text-setup">
         After the course, I continued improving my programming skills, building among others this website you are reading now, as well as expanding my overall knowledge of web development. I am excited to begin my career as a professional web developer, and look forward to building great websites. So if you are looking for a professional and enthusiastic programmer to add to your team, reach out to me today and let’s start a conversation.
       </p>
-      <a href="contact" class="contact-button ">Contact</a>
+      <%= link_to "Contact", "contact.html", class: "contact-button" %>
     </div>
     <div class="bottom-padding">
       <p class="text-setup">
