--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@ title: John Haus - Full Stack Web Developer
       <h1>John Haus - Full Stack Web Developer</h1>
       <p class="text-setup">Looking to add a developer to your team?</p>
       <p class="text-setup">Contact me today and let's get a conversation started.</p>
-      <a href="contact.html" class="contact-button ">Contact</a>
+      <%= link_to "Contact", "contact.html", class: "contact-button" %>
       <p class="text-setup project-padding">Take a look at some of my projects below</p>
       <i class="fas fa-arrow-down fa-3x down-arrow"></i>
     </div>
