--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -3,14 +3,14 @@
     <span class="bar"> </span>
   </div>
   <div class="top-navbar-background">
-    <h2><a href="/">John Haus - Full Stack Web Developer</a></h2>
+    <h2><%= link_to "John Haus - Full Stack Web Developer", "index.html" %></h2>
   </div>
   <!--Navbar Links-->
   <nav id="nav">
     <ul>
-      <li class="shape-circle circle-one"><a href="contact">Contact</a></li>
-      <li class="shape-circle circle-two"><a href="about">About</a></li>
-      <li class="shape-circle circle-three"><a href="/">Home</a></li>
+      <li class="shape-circle circle-one"><%= link_to "Contact", "contact.html" %></li>
+      <li class="shape-circle circle-two"><%= link_to "About", "about.html" %></li>
+      <li class="shape-circle circle-three"><%= link_to "Home", "index.html" %></li>
     </ul>
   </nav>
 
