--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <meta property='og:title' content='John Haus - Web Developer'/>
     <meta property='og:image' content='https://johnhaus.github.io/jhaus/source/images/JHaus.png'/>
     <meta property='og:description' content='My Profile Page'/>
-    <meta property='og:url' content='https://johnhaus.github.io/jhaus/'/>
+    <meta auto_display_meta_tags />
 
     <title><%= current_page.data.title %></title>
     <%= stylesheet_link_tag "application" %>
