--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,9 +7,8 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta property='og:title' content='John Haus - Web Developer'/>
-    <meta property='og:image' content="pull_image" />
+    <meta property='og:image' content="/images/JHaus.png" />
     <meta property='og:description' content='My Profile Page'/>
-    <meta auto_display_meta_tags />
 
     <title><%= current_page.data.title %></title>
     <%= stylesheet_link_tag "application" %>
