--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta property='og:title' content='John Haus - Web Developer'/>
-    <meta property='og:image' content="/images/JHaus.png" />
+    <meta property='og:image' content="https://johnhaus.github.io/jhaus/images/JHaus.png" />
     <meta property='og:description' content='My Profile Page'/>
 
     <title><%= current_page.data.title %></title>
