--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ title: John Haus - Full Stack Web Developer
 
 <div class="pages top-padding">
   <div class="container">
-    <div class="row background-picture" style="background-image: url('<%= image_path "Background.jpg" %>')">
+    <div class="row background-picture" style="background-image: url('<%= image_path "JHaus.png" %>')">
       <h1>John Haus - Full Stack Web Developer</h1>
       <p class="text-setup">Looking to add a developer to your team?</p>
       <p class="text-setup">Contact me today and let's get a conversation started.</p>
