added most recent website to list

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,6 +27,12 @@ title: John Haus - Full Stack Web Developer
       <div class="border top-margin"></div>
       <div>
         <div>
+          <% link_to 'https://buffet-denize-carvalho.herokuapp.com' do %>
+            <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= image_path "Buffet-Denize-Carvalho.jpg" %>')">
+            </div>
+          <% end %>
+        </div>
+        <div>
           <% link_to 'https://restaurant-advisor.herokuapp.com' do %>
             <div class="website-image" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= image_path "Restaurant-advisor.png" %>')">
             </div>
